log analytics added

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,6 +55,9 @@
 					<%= link_to "Questions" ,questions_path, class: "navigation-button" %>
 					<%= link_to "Options", options_path, class: "navigation-button" %>
 					<%= link_to "Results", results_path, class: "navigation-button" %>
+					<%= link_to "Quiz View Logs" ,quiz_view_logs_path, class: "navigation-button" %>
+					<%= link_to "Option Select Logs", option_select_logs_path, class: "navigation-button" %>
+					<%= link_to "Result View Logs", result_view_logs_path, class: "navigation-button" %>
 				</div>
 			<% end %>			
 		<%= yield %>
