--- a/app/views/option_select_logs/index.html.erb
+++ b/app/views/option_select_logs/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Listing option_select_logs</h1>
 
-<table>
+<table class = "table">
   <thead>
     <tr>
       <th>Option</th>
@@ -12,8 +12,8 @@
   <tbody>
     <% @option_select_logs.each do |option_select_log| %>
       <tr>
-        <td><%= option_select_log.option_id %></td>
-        <td><%= option_select_log.viewer_id %></td>
+        <td><%= option_select_log.option.title %></td>
+        <td><%= option_select_log.viewer.name %></td>
         <td><%= link_to 'Show', option_select_log %></td>
         <td><%= link_to 'Edit', edit_option_select_log_path(option_select_log) %></td>
         <td><%= link_to 'Destroy', option_select_log, method: :delete, data: { confirm: 'Are you sure?' } %></td>
