--- a/app/views/result_view_logs/index.html.erb
+++ b/app/views/result_view_logs/index.html.erb
@@ -1,6 +1,6 @@
 <h1>Listing result_view_logs</h1>
 
-<table>
+<table class = "table">
   <thead>
     <tr>
       <th>Result</th>
@@ -12,8 +12,8 @@
   <tbody>
     <% @result_view_logs.each do |result_view_log| %>
       <tr>
-        <td><%= result_view_log.result_id %></td>
-        <td><%= result_view_log.viewer_id %></td>
+        <td><%= result_view_log.result.title %></td>
+        <td><%= result_view_log.viewer.name %></td>
         <td><%= link_to 'Show', result_view_log %></td>
         <td><%= link_to 'Edit', edit_result_view_log_path(result_view_log) %></td>
         <td><%= link_to 'Destroy', result_view_log, method: :delete, data: { confirm: 'Are you sure?' } %></td>
