--- a/app/assets/stylesheets/quizzes.css.scss
+++ b/app/assets/stylesheets/quizzes.css.scss
@@ -113,6 +113,7 @@ body{
 .listed-quiz-container{
 	@extend .row;
 	margin-bottom: 15px !important;	
+	margin-top: 10px;
 	width: 75%;
 	margin:0 auto;
 	background: white;
