added quiz live status

--- a/app/views/quizzes/_form.html.erb
+++ b/app/views/quizzes/_form.html.erb
@@ -17,6 +17,11 @@
   </div>
 
   <div class="field">
+    <%= f.label :status %><br>
+    <%= f.text_field :status, class: "input-text-field" %>
+  </div>
+
+  <div class="field">
     <%= f.label :description %><br>
     <%= f.text_area :description, :cols => "60", :rows => "4", class: "input-text-area" %>
   </div>
