--- a/app/views/quizzes/index.html.erb
+++ b/app/views/quizzes/index.html.erb
@@ -9,6 +9,7 @@
       <th>Title</th>
       <th>Result Prefix</th>
       <th>View count</th>
+      <th>Status</th>
       <th colspan="3"></th>
     </tr>
   </thead>
@@ -24,6 +25,7 @@
         <td><%= quiz.title %></td>
         <td><%= quiz.result_prefix %></th>
         <td><%= quiz.view_count %></td>
+        <td><%= quiz.status %></td>
         <td><%= link_to 'Show', quiz %></td>
         <td><%= link_to 'Edit', edit_quiz_path(quiz) %></td>
         <td><%= link_to 'Destroy', quiz, method: :delete, data: { confirm: 'Are you sure?' } %></td>
