sign out button showing

--- a/app/assets/stylesheets/quizzes.css.scss
+++ b/app/assets/stylesheets/quizzes.css.scss
@@ -97,6 +97,9 @@ body{
 	border-color: transparent;
 	box-shadow: none;		
 }
+.sign-out-button{
+	background-color: white;
+}
 .card-shadow{
 	-webkit-box-shadow: 0px 0px 8px 7px rgba(50, 50, 50, 0.37);
 	-moz-box-shadow:    0px 0px 8px 7px rgba(50, 50, 50, 0.37);
