--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -45,7 +45,7 @@
 					</div>
 				</div>		
 			</div>	
-			<% if user_signed_in? %><%= link_to "Sign Out", destroy_user_session_path, method: :delete %><% end %>		
+			<% if user_signed_in? %><%= link_to "Sign Out", destroy_user_session_path, method: :delete, class:"sign-out-button" %><% end %>		
 		</div>
 	</div>
 	<div id = "site-content-container">
