--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -2,6 +2,8 @@
 
 <%= link_to 'New Question', new_question_path, class: "create-new-instance-button" %>
 
+<%= link_to 'New Complete Question', complete_create_form_questions_path, class: "create-new-instance-button" %>
+
 <table class="table">
   <thead>
     <tr>
