--- a/app/views/quizzes/index.html.erb
+++ b/app/views/quizzes/index.html.erb
@@ -1,7 +1,7 @@
 <h1>Listing quizzes</h1>
 
 <%= link_to 'New Quiz', new_quiz_path, class: "create-new-instance-button" %>
-
+<%= link_to 'New Complete Quiz', complete_create_form_quizzes_path, class: "create-new-instance-button" %>
 <table class="table">
   <thead>
     <tr>
