formtastic image aligned

--- a/app/assets/stylesheets/quizzes.css.scss
+++ b/app/assets/stylesheets/quizzes.css.scss
@@ -523,3 +523,6 @@ form.formtastic fieldset > ol > li.radio fieldset > .label > label{
   margin-left: 40px;
   font-weight: bold;
 }
+.formtastic-form-image{
+	margin:5px 0px 5px 170px;
+}
