--- a/app/views/quizzes/_form.html.erb
+++ b/app/views/quizzes/_form.html.erb
@@ -5,13 +5,13 @@
       <%= f.input :status %>
       <%= f.input :description , :input_html => { :class => 'autogrow', :rows =>4, :maxlength => 60  } %>
       <%= f.input :result_prefix , :input_html => { :class => 'autogrow', :rows =>4, :maxlength => 60  }%>
-      <%= image_tag @quiz.image.url(:medium) %>
+      <%= image_tag @quiz.image.url(:medium), class: "formtastic-form-image" %>
       <%= f.input :image, :as => :file %>
     <% end %>
 
     <%= f.inputs :name => "Result", :for => :results do |result_form,i| %>
       <% if @quiz.results[i-1].present? %>
-        <%= image_tag @quiz.results[i-1].image.url(:small) %>
+        <%= image_tag @quiz.results[i-1].image.url(:small), class: "formtastic-form-image" %>
       <% end %>
       <%= result_form.input :title , :input_html => { :class => 'autogrow', :rows =>1, :maxlength => 20  } %>
       <%= result_form.input :description , :input_html => { :class => 'autogrow', :rows =>4, :maxlength => 300  } %>
