--- a/app/views/options/_form.html.erb
+++ b/app/views/options/_form.html.erb
@@ -31,6 +31,27 @@
   <div class="field">
     <%= f.file_field :content %>
   </div>
+
+  <div class="field">
+    <label>Is Store Product?</label>
+    <input type="hidden" name="option[store_product]" value="off">
+    <input type="checkbox" name="option[store_product]"  <%= "checked" if @option.store_product==true %> />
+  </div>
+
+  <div class="field">
+    <%= f.label :store_link %><br>
+    <%= f.text_area :store_link, :cols => "10", :rows => "1", class: "input-text-area" %>
+  </div>
+
+  <div class="field">
+    <%= f.label :store_name %><br>
+    <%= f.text_field :store_name %>
+  </div>
+
+  <div class="field">
+    <%= f.label :store_price %><br>
+    <%= f.text_field :store_price %>
+  </div>
   
   <div class="actions">
     <%= f.submit class:"edit-form-submit-button" %>
