--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -58,6 +58,7 @@
 					<%= link_to "Quiz View Logs" ,quiz_view_logs_path, class: "navigation-button" %>
 					<%= link_to "Option Select Logs", option_select_logs_path, class: "navigation-button" %>
 					<%= link_to "Result View Logs", result_view_logs_path, class: "navigation-button" %>
+					<%= link_to "Viewers", viewers_path, class: "navigation-button" %>
 				</div>
 			<% end %>			
 		<%= yield %>
