--- a/app/views/viewers/_form.html.erb
+++ b/app/views/viewers/_form.html.erb
@@ -15,6 +15,12 @@
     <%= f.label :name %><br>
     <%= f.text_area :name %>
   </div>
+
+  <div class="field">
+    <%= f.label :secret %><br>
+    <%= f.text_field :secret %>
+  </div>
+
   <div class="field">
     <%= f.label :quizzes_viewed %><br>
     <%= f.number_field :quizzes_viewed %>
