--- a/app/views/viewers/index.html.erb
+++ b/app/views/viewers/index.html.erb
@@ -1,9 +1,10 @@
 <h1>Listing viewers</h1>
 
-<table>
+<table class = "table">
   <thead>
     <tr>
       <th>Name</th>
+      <th>Secret</th>
       <th>Quizzes viewed</th>
       <th>Questions viewed</th>
       <th colspan="3"></th>
@@ -14,6 +15,7 @@
     <% @viewers.each do |viewer| %>
       <tr>
         <td><%= viewer.name %></td>
+        <td><%= viewer.secret %></td>
         <td><%= viewer.quizzes_viewed %></td>
         <td><%= viewer.questions_viewed %></td>
         <td><%= link_to 'Show', viewer %></td>
