--- a/app/views/quizzes/show.html.erb
+++ b/app/views/quizzes/show.html.erb
@@ -69,7 +69,11 @@
 			</div>
 			<div class = "result-row">
 				<div id = "result-image-container">
-					<image id = "result-image" >
+					<div class="centering-table">
+	   					<div class="centering-table-cell" id = "result-image-container-cell">  	
+	   						<image id = "result-image" >	   							
+	    	  			</div>
+	  				</div>					
 				</div>					
 				<div id = "result-description-container">
 					<div class="centering-table">
