--- a/app/views/quizzes/list.html.erb
+++ b/app/views/quizzes/list.html.erb
@@ -1,6 +1,25 @@
 <div class="main-quiz-list-container">
 	<% @quizzes.each do |quiz|%>
-		<% if quiz.status == 'live'%>
+		<% if quiz.is_live? %>
+			<a href = "/quizzes/<%= quiz.id %>">
+				<div class="listed-quiz-container">
+					<div class = "listed-quiz-image">
+						<%= image_tag quiz.image.url(:medium) %>
+					</div>
+					<div class = "listed-quiz-text">
+						<h2 class = "listed-quiz-title listed-quiz-title-lg"><%= quiz.title %></h2>
+						<h2 class = "listed-quiz-title listed-quiz-title-sm"><%= quiz.title %></h2>
+						<div class = "listed-quiz-description-lg-container">
+							<p class = "listed-quiz-description-lg"><%= quiz.description %></p>
+						</div>
+						<div class = "listed-quiz-description-sm-container">
+							<p class = "listed-quiz-description-sm"><%= quiz.description %></p>
+						</div>
+					</div>			
+				</div>
+			</a>
+		<% elsif quiz.is_preview? and user_signed_in? %>
+			<h4>Preview:<h4>
 			<a href = "/quizzes/<%= quiz.id %>">
 				<div class="listed-quiz-container">
 					<div class = "listed-quiz-image">
