changed word limits of question and result

--- a/app/views/questions/show.html.erb
+++ b/app/views/questions/show.html.erb
@@ -7,7 +7,7 @@
 
 <p>
   <strong>Quiz:</strong>
-  <%= @question.quiz.title %>
+  <%= @question.quiz.title if @question.quiz.present? %>
 </p>
 
 <p>
