--- a/app/views/questions/index.html.erb
+++ b/app/views/questions/index.html.erb
@@ -18,7 +18,7 @@
     <% @questions.each do |question| %>
       <tr>
         <td><%= question.title %></td>
-        <td><%= question.quiz.title %></td>
+        <td><%= question.quiz.title if question.quiz.present? %></td>
         <td><%= question.view_count %></td>
         <td><%= link_to 'Show', question %></td>
         <td><%= link_to 'Edit', edit_question_path(question) %></td>
