--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,28 +1,17 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>QFash</title>
+  <title>Quiz App</title>
   <%= stylesheet_link_tag    'application', media: 'all' %>
   <link href='http://fonts.googleapis.com/css?family=Great+Vibes|Allura' rel='stylesheet' type='text/css'>
   <%= javascript_include_tag 'application' %>
   <%= csrf_meta_tags %>
-  <script>
-	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-	  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-	  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-	  ga('create', 'UA-56543572-1', 'auto');
-	  ga('require', 'displayfeatures');
-	  ga('require', 'linkid', 'linkid.js');
-	  ga('send', 'pageview');
-	</script>
 </head>
 <body id = "site-body">
 	<div id = "site-header-container">
 		<div id = "site-header">
 			<div id = "site-title-container">
-				<div id = "site-title">QFash</div>
+				<div id = "site-title">Quiz App</div>
 				<a href = "/">
 					<div id = "site-link"></div>
 				</a>
